container page styling

--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -5,8 +5,26 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto&display=swap' rel="stylesheet">
+    <style>
+      html, body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+      }
+      #anchor {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        background-color: #212121;
+        letter-spacing: 0.2px;
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
   </head>
   <body>
-    <div id='container' class='go-ui-container'></div>
+    <div id='anchor' class='go-ui-container'></div>
   </body>
 </html>
