--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -16,6 +16,7 @@
         margin: 0;
         padding: 0;
         display: flex;
+        flex-flow: column nowrap;
         width: 100%;
         height: 100%;
         background-color: #212121;
