--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -22,6 +22,18 @@
         background-color: #212121;
         letter-spacing: 0.2px;
         font-family: 'Roboto', sans-serif;
+        color: #F1F1F1;
+      }
+
+      @media screen and (max-width: 799px) {
+        html, body {
+          font-size: 14px;
+        }
+      }
+      @media screen and (min-width: 800px) {
+        html, body {
+          font-size: 24px;
+        }
       }
     </style>
   </head>
