--- a/test/manual/index.html
+++ b/test/manual/index.html
@@ -5,39 +5,6 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto&display=swap' rel="stylesheet">
-    <style>
-      html, body {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-        margin: 0;
-      }
-      #anchor {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-flow: column nowrap;
-        width: 100%;
-        height: 100%;
-        background-color: #212121;
-        letter-spacing: 0.2px;
-        font-family: 'Roboto', sans-serif;
-        color: #F1F1F1;
-      }
-
-      @media screen and (max-width: 799px) {
-        html, body {
-          font-size: 14px;
-        }
-      }
-      @media screen and (min-width: 800px) {
-        html, body {
-          font-size: 24px;
-        }
-      }
-    </style>
   </head>
-  <body>
-    <div id='anchor' class='go-ui-container'></div>
-  </body>
+  <body id='anchor'></body>
 </html>
